--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Document</title>
 	</head>
-	<body class="bg-gray-700">
+	<body class="bg-gray-700 font-serif text-cyan-700">
 		<header class="flex justify-center mt-6 text-2xl font-serif text-cyan-700">
 			Movified
 		</header>
@@ -20,5 +20,17 @@
 				ex quibusdam praesentium iusto nemo necessitatibus.
 			</p>
 		</section>
+
+		<section class="cards flex justify-evenly text-2xl text-cyan-700 mt-10">
+			<div id="book">
+				<p id="book-title">Book Title</p>
+				<img src="./assets/images/card-placeholder.png" alt="Book cover art" />
+			</div>
+			<div id="movie">
+				<p id="movie-title">Movie Title</p>
+				<img src="./assets/images/card-placeholder.png" alt="Movie cover art" />
+			</div>
+		</section>
+        
 	</body>
 </html>
