--- a/index.html
+++ b/index.html
@@ -23,14 +23,36 @@
 
 		<section class="cards flex justify-evenly text-2xl text-cyan-700 mt-10">
 			<div id="book">
-				<p id="book-title">Book Title</p>
-				<img src="./assets/images/card-placeholder.png" alt="Book cover art" />
+				<p id="book-title" class="flex justify-center">Book Title</p>
+				<img
+					src="./assets/images/card-placeholder.png"
+					alt="Book cover art"
+					class="border-4 border-indigo-500 rounded-md"
+				/>
 			</div>
 			<div id="movie">
-				<p id="movie-title">Movie Title</p>
-				<img src="./assets/images/card-placeholder.png" alt="Movie cover art" />
+				<p id="movie-title" class="flex justify-center">Movie Title</p>
+				<img
+					src="./assets/images/card-placeholder.png"
+					alt="Movie cover art"
+					class="border-4 border-indigo-500 rounded-md"
+				/>
 			</div>
 		</section>
-        
+		<section class="flex justify-center mt-6 text-2xl font-serif">
+			<form class="border-4 border-indigo-500 rounded-md">
+				<!--input for book/movie title-->
+				<label for="book-input"></label>
+				<input type="text" id="book-name" placeholder="Book or Movie Title" />
+			</form>
+			<div>
+				<button
+					type="button"
+					class="bg-slate-600 border-4 border-indigo-500 rounded-md ml-5"
+				>
+					Search
+				</button>
+			</div>
+		</section>
 	</body>
 </html>
