--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<header class="flex justify-center mt-6 text-2xl font-serif text-cyan-700">
 			Movified
 		</header>
+
+		<!--sention for brief tutorial or description of site functions-->
 		<section class="guide flex text-gray-50 mx-80 mt-10">
 			<p>
 				This will be a tutorial on using the site. Lorem ipsum dolor sit amet
@@ -22,6 +24,7 @@
 		</section>
 
 		<section class="cards flex justify-evenly text-2xl text-cyan-700 mt-10">
+			<!--sention for google books API to update. feel free to add id's as needed-->
 			<div id="book">
 				<p id="book-title" class="flex justify-center">Book Title</p>
 				<img
@@ -30,6 +33,8 @@
 					class="border-4 border-indigo-500 rounded-md"
 				/>
 			</div>
+
+			<!--sention for movie IMDB API to update. feel free to add id's as needed-->
 			<div id="movie">
 				<p id="movie-title" class="flex justify-center">Movie Title</p>
 				<img
@@ -39,6 +44,8 @@
 				/>
 			</div>
 		</section>
+
+		<!--sention for user input and searching both databases-->
 		<section class="flex justify-center mt-6 text-2xl font-serif">
 			<form class="border-4 border-indigo-500 rounded-md">
 				<!--input for book/movie title-->
