--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 			</form>
 			<div>
 				<button
+					id="search-bttn"
 					type="button"
 					class="bg-slate-600 border-4 border-indigo-500 rounded-md ml-5"
 				>
