--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</head>
 	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
 		<header
-			class="flex justify-center mt-6 text-6xl font-mono text-white underline"
+			class="flex justify-center mt-6 text-6xl font-mono text-white underline md:flex"
 		>
 			Movified
 		</header>
 
 		<!--sention for brief tutorial or description of site functions-->
-		<section class="guide flex text-white mx-80 mt-10 text-2xl font-serif">
+		<section class="guide flex text-white text-2xl font-serif md:flex p-4">
 			<p>
 				This will be a tutorial on using the site. Lorem ipsum dolor sit amet
 				consectetur adipisicing elit. Optio error, iste tempore vel voluptatibus
