--- a/index.html
+++ b/index.html
@@ -9,49 +9,7 @@
 		<title>Document</title>
 	</head>
 	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
-		<header
-			class="flex justify-center mt-6 text-6xl font-mono text-white underline md:flex"
-		>
-			Movified
-		</header>
-
-		<!--sention for brief tutorial or description of site functions-->
-		<section class="guide flex text-white text-2xl font-serif md:flex p-4">
-			<p>
-				This will be a tutorial on using the site. Lorem ipsum dolor sit amet
-				consectetur adipisicing elit. Optio error, iste tempore vel voluptatibus
-				in placeat fugiat? Reiciendis suscipit saepe id, repudiandae neque hic
-				ex quibusdam praesentium iusto nemo necessitatibus.
-			</p>
-		</section>
-
-		<section class="cards flex justify-evenly text-2xl text-cyan-700 mt-10">
-			<!--section for google books API to update. feel free to add id's as needed-->
-			<div id="book">
-				<p id="book-title" class="flex justify-center text-4xl text-white">
-					Book Title
-				</p>
-				<img
-					src="./assets/images/card-placeholder.png"
-					alt="Book cover art"
-					class="border-4 border-stone-600 rounded-md shadow-2xl"
-				/>
-			</div>
-
-			<!--sention for movie IMDB API to update. feel free to add id's as needed-->
-			<div id="movie">
-				<p id="movie-title" class="flex justify-center text-4xl text-white">
-					Movie Title
-				</p>
-				<img
-					src="./assets/images/card-placeholder.png"
-					alt="Movie cover art"
-					class="border-4 border-stone-600 rounded-md shadow-2xl"
-				/>
-			</div>
-		</section>
-
-		<!--sention for user input and searching both databases-->
+		<!--Hero search-bar-->
 		<section class="flex justify-center mt-6 text-2xl font-serif">
 			<form>
 				<!--input for book/movie title-->
@@ -59,7 +17,7 @@
 				<input
 					type="text"
 					id="book-name"
-					placeholder="Book or Movie Title"
+					placeholder="Search for Superhero!"
 					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
 				/>
 			</form>
@@ -69,10 +27,48 @@
 					type="button"
 					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
 				>
-					Search
+					FIGHT!
 				</button>
 			</div>
 		</section>
+		<section class="display:inline pt-40">
+			<div class="p-10 ml-6">
+				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
+			</div>
+			<div id="buttons">
+			<button
+				id="search-bttn"
+				type="button"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1"
+			>
+				COMICS
+			</button>
+			<button
+				id="search-bttn"
+				type="button"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+			>
+				STORIES
+			</button>
+			<button
+				id="search-bttn"
+				type="button"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+			>
+				EVENTS
+			</button>
+		</section>
+
+		<div class="p-4">
+			<button
+				id="search-bttn"
+				type="button"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11"
+			>
+				MOVIE APPEARANCES
+			</button>
+			</div>
+		</div>
 	</body>
 	<footer>
 		<p>Made By Bryan, Chris, Dave and Hadas!</p>
