--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 				COMICS
 			</button>
 			<button
-				id="search-bttn"
+				id="s-btn"
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
 			>
 				STORIES
 			</button>
 			<button
-				id="search-bttn"
+				id="events-btn"
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
 			>
@@ -59,9 +59,9 @@
 			</button>
 		</section>
 
-		<div class="p-4">
+		<div id="appearances" class="p-4">
 			<button
-				id="search-bttn"
+				id="movie-btn"
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11"
 			>
@@ -69,6 +69,9 @@
 			</button>
 			</div>
 		</div>
+		<article id="movie-list" >
+			
+		</article>
 	</body>
 	<footer>
 		<p>Made By Bryan, Chris, Dave and Hadas!</p>
