--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
   </head>
@@ -52,7 +52,10 @@
     </section>
 
     <!--sention for user input and searching both databases-->
-    <section class="flex justify-center mt-6 text-2xl font-serif">
+    <!-- FYI class name "hero-name-display" added by Hadas -->
+    <section
+      class="hero-name-display flex justify-center mt-6 text-2xl font-serif"
+    >
       <form>
         <!--input for book/movie title-->
         <label for="book-input"></label>
