updated button classes
classes for buttons are now equal to button label

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			</form>
 			<div>
 				<button
-					id="search-bttn"
+			
 					type="button"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 Search"
 				>
-					FIGHT!
+					Search
 				</button>
 			</div>
 		</section>
@@ -37,23 +37,23 @@
 			</div>
 			<div id="buttons">
 			<button
-				id="search-bttn"
+				
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1 comics"
 			>
 				COMICS
 			</button>
 			<button
-				id="s-btn"
+				i
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories"
 			>
 				STORIES
 			</button>
 			<button
 				id="events-btn"
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events"
 			>
 				EVENTS
 			</button>
@@ -63,7 +63,7 @@
 			<button
 				id="movie-btn"
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances"
 			>
 				MOVIE APPEARANCES
 			</button>
