--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="p-10 ml-6">
 				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
 			</div>
-			<div id="buttons">
+			<div class="buttons">
 			<button
 				
 				type="button"
@@ -44,14 +44,12 @@
 				COMICS
 			</button>
 			<button
-				i
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories"
 			>
 				STORIES
 			</button>
 			<button
-				id="events-btn"
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events"
 			>
@@ -61,7 +59,6 @@
 
 		<div id="appearances" class="p-4">
 			<button
-				id="movie-btn"
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances"
 			>
@@ -69,7 +66,7 @@
 			</button>
 			</div>
 		</div>
-		<article id="movie-list" >
+		<article class="movie-list" >
 			
 		</article>
 	</body>
