--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./assets/css/css/styles.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
-		<title>Document</title>
+		<title>Hero Hub</title>
 	</head>
 	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
 		<!--Hero search-bar-->
