--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 		<link rel="stylesheet" href="./assets/css/css/styles.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Hero Hub</title>
+		<link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
+		<style>
+			body {
+				font-family: "Bangers", sans-serif;
+			}
+		</style>
 	</head>
-	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
+	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500 tracking-wide">
 		<!--Hero search-bar-->
-		<section class="flex justify-center mt-6 text-2xl font-serif">
+		<section class="flex justify-center mt-6 text-2xl ">
 			<form>
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
@@ -18,14 +24,14 @@
 					type="text"
 					id="book-name"
 					placeholder="Search for Superhero!"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3"
 				/>
 			</form>
 			<div>
 				<button
 			
 					type="button"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 Search"
+					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 Search"
 				>
 					Search
 				</button>
@@ -39,19 +45,19 @@
 			<button
 				
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1 comics"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-purple text-3xl shadow-2xl p-3 comics"
 			>
 				COMICS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 stories"
 			>
 				STORIES
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 events"
 			>
 				EVENTS
 			</button>
@@ -60,7 +66,7 @@
 		<div id="appearances" class="p-4">
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances"
 			>
 				MOVIE APPEARANCES
 			</button>
