--- a/index.html
+++ b/index.html
@@ -5,72 +5,53 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./assets/css/css/styles.css" />
+    <link rel="icon" href="./assets/images/icons8-boom-48.png"/>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Hero Hub</title>
 	</head>
+
 	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
 		<!--Hero search-bar-->
 		<section class="flex justify-center mt-6 text-2xl font-serif">
 			<form>
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
+        <!-- FYI added a class "hero-search-input" -->
 				<input
 					type="text"
 					id="book-name"
 					placeholder="Search for Superhero!"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+          class="hero-search-input bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
 				/>
 			</form>
 			<div>
-				<button
-			
-					type="button"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 Search"
-				>
-					Search
-				</button>
+      	<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 hero-search">Search</button>
 			</div>
 		</section>
+
 		<section class="display:inline pt-40">
 			<div class="p-10 ml-6">
 				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
 			</div>
 			<div class="buttons">
-			<button
-				
-				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1 comics"
-			>
-				COMICS
-			</button>
-			<button
-				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories"
-			>
-				STORIES
-			</button>
-			<button
-				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events"
-			>
-				EVENTS
-			</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1 comics" >COMICS</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories">STORIES</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events">EVENTS</button>
 		</section>
 
 		<div id="appearances" class="p-4">
-			<button
-				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances"
-			>
-				MOVIE APPEARANCES
-			</button>
+			<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances">MOVIE APPEARANCES</button>
 			</div>
 		</div>
+
 		<article class="movie-list" >
 			
 		</article>
+    <footer>
+      <p>Made By Bryan, Chris, Dave and Hadas!</p>
+    </footer>
+
+
+    <script src="assets/js/script.js"></script>
 	</body>
-	<footer>
-		<p>Made By Bryan, Chris, Dave and Hadas!</p>
-	</footer>
 </html>
