script.js tag added, basic fetch added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<button
 			
 					type="button"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 Search"
+					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 search-bttn"
 				>
 					Search
 				</button>
@@ -75,8 +75,12 @@
 		<article class="movie-list" >
 			
 		</article>
+    <footer>
+      <p>Made By Bryan, Chris, Dave and Hadas!</p>
+    </footer>
+
+
+
+    <script src="assets/js/script.js"></script>
 	</body>
-	<footer>
-		<p>Made By Bryan, Chris, Dave and Hadas!</p>
-	</footer>
 </html>
