--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./assets/css/css/styles.css" />
     <link rel="icon" href="./assets/images/icons8-boom-48.png"/>
+		<link rel="stylesheet" href="./assets/css/css/styles.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Hero Hub</title>
+    <link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
+    <style>
+			body {
+				font-family: "Bangers", sans-serif;
+			}
+		</style>
 	</head>
 
-	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500">
+	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500 tracking-wide">
 		<!--Hero search-bar-->
-		<section class="flex justify-center mt-6 text-2xl font-serif">
+		<section class="flex justify-center mt-6 text-2xl ">
 			<form>
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
@@ -21,32 +27,29 @@
 					type="text"
 					id="book-name"
 					placeholder="Search for Superhero!"
-          class="hero-search-input bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1"
+          class="hero-search-input bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3"
 				/>
 			</form>
 			<div>
-				<button
-			
-					type="button"
-					class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 search-bttn"
-				>
-					Search
-				</button>
+				<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 search-bttn">Search</button>
 			</div>
 		</section>
 
 		<section class="display:inline pt-40">
-			<div class="p-10 ml-6">
+      <!-- FYI added class: hero-name-display -->
+			<div class="p-10 ml-6 hero-name-display">
 				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
 			</div>
+
+      <!-- FYI buttons div should have a class of "hidden" and chenge to "visible" when a hero is displayed-->
 			<div class="buttons">
-			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-white text-xl text-mono shadow-2xl p-1 comics" >COMICS</button>
-			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 stories">STORIES</button>
-			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-white text-xl text-mono shadow-2xl p-1 events">EVENTS</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-purple text-3xl shadow-2xl p-3 comics">COMICS</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 stories">STORIES</button>
+			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 events">EVENTS</button>
 		</section>
 
 		<div id="appearances" class="p-4">
-			<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full text-white text-xl text-mono shadow-2xl p-1 px-11 movie-appearances">MOVIE APPEARANCES</button>
+			<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances">MOVIE APPEARANCES</button>
 			</div>
 		</div>
 
@@ -56,8 +59,9 @@
     <footer>
       <p>Made By Bryan, Chris, Dave and Hadas!</p>
     </footer>
-
-
     <script src="assets/js/script.js"></script>
 	</body>
 </html>
+
+		
+
