added fetch for gif api

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
 				/>
 			</form>
 			<div>
-				<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 search-bttn">Search</button>
+				<button	type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 search-bttn">Search</button>
 			</div>
 		</section>
 
 		<section class="display:inline pt-40">
       <!-- FYI added class: hero-name-display -->
 			<div class="p-10 ml-6 hero-name-display">
-				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
+				<!-- FYI added class to img and removed attributes -->
+				<img class="hero-gif"/>
 			</div>
 
       <!-- FYI buttons div should have a class of "hidden" and chenge to "visible" when a hero is displayed-->
