commit and sync

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="./assets/css/css/styles.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Hero Hub</title>
+		<link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
 		<style>
 			body {
@@ -41,7 +42,7 @@
 			<div class="p-10 ml-6">
 				<img src="./assets/images/card-placeholder.png" alt="Your Superhero" />
 			</div>
-			<div class="buttons">
+			<div class="buttons invisible visible">
 			<button
 				
 				type="button"
@@ -66,7 +67,7 @@
 		<div id="appearances" class="p-4">
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances invisible visible"
 			>
 				MOVIE APPEARANCES
 			</button>
