updating media breakpoints

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 		</style>
 	</head>
 
-	<body class="h-14 bg-gradient-to-r from-sky-500 to-indigo-500 tracking-wide">
+	<body class="h-14 bg-stone-50 from-sky-500 to-indigo-500 tracking-wide">
+
+
 		<!--Hero search-bar-->
-		<section class="flex justify-center mt-6 text-2xl ">
-			<form>
+		<section class="flex justify-center mt-6 text-2xl border-4 border-black pt-20 m-5 bg-gradient-to-r from-orange-500 shadow-2xl md:max-w-2xl">
+			<form class="md:flex">
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
         <!-- FYI added a class "hero-search-input" -->
@@ -27,7 +29,7 @@
 					type="text"
 					id="book-name"
 					placeholder="Search for Superhero!"
-          class="hero-search-input bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3"
+          class="hero-search-input bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 border-3 border-black"
 				/>
 			</form>
 			<div>
