working functionality for 2 APIs

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 		<section class="display:inline pt-40">
       <!-- FYI added class: hero-name-display -->
 			<div class="p-10 ml-6 hero-name-display">
-				<!-- FYI added class to img and removed attributes -->
-				<img class="hero-gif"/>
+				<!-- FYI added class to img and removed attributes. FYI need to add invisible class to img -->
+				<img class="hero-gif" src="#"/>
 			</div>
 
-      <!-- FYI buttons div should have a class of "hidden" and chenge to "visible" when a hero is displayed-->
-			<div class="buttons">
+     
+			<div class="buttons invisible">
 			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-purple text-3xl shadow-2xl p-3 comics">COMICS</button>
 			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 stories">STORIES</button>
 			<button type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 events">EVENTS</button>
 		</section>
 
 		<div id="appearances" class="p-4">
-			<button	type="button"	class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances">MOVIE APPEARANCES</button>
+			<button	type="button" class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances">MOVIE APPEARANCES</button>
 			</div>
 		</div>
 
