--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 		</style>
 	</head>
 
-	<body class="flex bg-stone-50 from-sky-500 to-indigo-500 tracking-wide">
+	<body class="bg-stone-50 from-sky-500 to-indigo-500">
 		<!--Hero search-bar-->
 		
-		<section class=" flex border-4 border-black bg-gradient-to-r //from-orange-500 m-3 place-content-start p-6">
+		<section class=" flex border-4 border-black bg-gradient-to-r //from-orange-500 m-2 p-10 ">
 
-			<form class=" justify p-2">
+			<form class="p-2">
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
         <!-- FYI added a class "hero-search-input" -->
@@ -30,21 +30,21 @@
 					type="text"
 					id="book-name"
 					placeholder="Search for Superhero!"
-          class="hero-search-input"
+         			class="hero-search-input"
 				/>
 			</form>
 			<div>
 				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-full text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
 			</div>
-		</section>
+			</section>
 
-		<section class="display:flex">
+		<section class=" flex-wrap">
       <!-- FYI added class: hero-name-display -->
 			<div class="hero-name-display">
 				<!-- FYI added class to img and removed attributes -->
 				<img class="hero-gif"/>
 			</div>
-			<div class="buttons invisible visible">
+			<div class="flex buttons  visible">
 			<button
 				
 				type="button"
@@ -69,7 +69,7 @@
 		<div id="appearances" class="p-4">
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances invisible visible"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances  visible"
 			>
 				MOVIE APPEARANCES
 			</button>
@@ -79,9 +79,6 @@
 		<article class="movie-list" >
 			
 		</article>
-    <footer>
-      <p>Made By Bryan, Chris, Dave and Hadas!</p>
-    </footer>
     <script src="assets/js/script.js"></script>
 	</body>
 </html>
