code clean up/class add
added visible/invisible class and cleaned up code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 			<form class="p-2">
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
-        <!-- FYI added a class "hero-search-input" -->
 				<input
 					type="text"
 					id="book-name"
@@ -39,12 +38,11 @@
 			</section>
 
 		<section class=" flex-wrap">
-      <!-- FYI added class: hero-name-display -->
 			<div class="hero-name-display">
 				<!-- FYI added class to img and removed attributes -->
-				<img class="hero-gif" src="#"/>
+				<img class="hero-gif invisible visible" src="#"/>
 			</div>
-			<div class="flex buttons  visible">
+			<div class="flex buttons invisible visible">
 			<button
 				
 				type="button"
@@ -69,7 +67,7 @@
 		<div id="appearances" class="p-4">
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances  visible"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances invisible visible"
 			>
 				MOVIE APPEARANCES
 			</button>
