--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		</style>
 	</head>
 
-	<body class="bg-stone-50 from-sky-500 to-indigo-500">
+	<body class="bg-stone-50">
 		<!--Hero search-bar-->
 		
-		<section class=" flex border-4 border-black bg-gradient-to-r //from-orange-500 m-2 p-10 ">
+		<section class=" flex border-4 border-black bg-gradient-to-r from-cyan-500 to-blue-500 m-2 p-10 ">
 
 			<form class="p-2">
 				<!--input for book/movie title-->
@@ -32,47 +32,46 @@
          			class="hero-search-input"
 				/>
 			</form>
-			<div>
+			
 				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-full text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
 			</div>
+</div>
+
 			</section>
 
-		<section class=" flex-wrap">
+		<section class=" flex border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 			<div class="hero-name-display">
 				<!-- FYI added class to img and removed attributes -->
-				<img class="hero-gif invisible visible" src="#"/>
+				<img class="hero-gif visible" src="#"/>
 			</div>
-			<div class="flex buttons invisible visible">
+			<div class="flex-wrap buttons">
 			<button
 				
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-4 text-purple text-3xl shadow-2xl p-3 comics"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 comics"
 			>
 				COMICS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 stories"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 stories"
 			>
 				STORIES
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full ml-5 text-purple text-3xl shadow-2xl p-3 events"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 events"
 			>
 				EVENTS
 			</button>
-		</section>
-
-		<div id="appearances" class="p-4">
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 px-11 movie-appearances invisible visible"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 movie-appearances"
 			>
 				MOVIE APPEARANCES
 			</button>
-			</div>
-		</div>
+		</section>
+
 
 		<article class="movie-list" >
 			
