fixed flex issue
fixed flex issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body class="bg-stone-50">
 		<!--Hero search-bar-->
 		
-		<section class=" flex border-4 border-black bg-gradient-to-r from-cyan-500 to-blue-500 m-2 p-10 ">
+		<section class=" flex justify-center border-4 border-black bg-gradient-to-r from-cyan-500 to-blue-500 m-2 p-9 ">
 
 			<form class="p-2">
 				<!--input for book/movie title-->
@@ -39,12 +39,12 @@
 
 			</section>
 
-		<section class=" flex border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
+		<section class=" flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 			<div class="hero-name-display">
 				<!-- FYI added class to img and removed attributes -->
 				<img class="hero-gif visible" src="#"/>
 			</div>
-			<div class="flex-wrap buttons">
+
 			<button
 				
 				type="button"
@@ -68,7 +68,7 @@
 				type="button"
 				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 movie-appearances"
 			>
-				MOVIE APPEARANCES
+				MOVIES
 			</button>
 		</section>
 
