--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 	<body class="bg-stone-50">
 		<!--Hero search-bar-->
 		
-		<section class=" flex justify-center border-4 border-black bg-gradient-to-r from-cyan-500 to-blue-500 m-2 p-9 ">
-
+		<section class=" flex justify-center border-4 border-black bg-gradient-to-r from-blue-800 to-yellow-500 m-2 p-9 shadow-2xl ">
 			<form class="p-2">
 				<!--input for book/movie title-->
 				<label for="book-input"></label>
@@ -35,41 +34,44 @@
 			
 				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-full text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
 			</div>
-</div>
+
 
 			</section>
 
-		<section class=" flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
-			<div class="hero-name-display">
+			<div class="hero-name-display flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10 invisible visible">
 				<!-- FYI added class to img and removed attributes -->
-				<img class="hero-gif visible" src="#"/>
+				<img class="hero-gif" src="#"/>
 			</div>
 
+		<section class=" flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
+
+			<div class="flex-wrap">
 			<button
 				
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 comics"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 comics"
 			>
 				COMICS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 stories"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 stories"
 			>
 				STORIES
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 events"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 events"
 			>
 				EVENTS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-3 movie-appearances"
+				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3  movie-appearances"
 			>
 				MOVIES
 			</button>
+			</div>
 		</section>
 
 
