--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				/>
 			</form>
 			
-				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-full text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
+				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
 			</div>
 
 
@@ -49,25 +49,29 @@
 			<button
 				
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 comics"
+				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 comics
+				border-dashed border-4 border-amber-300"
 			>
 				COMICS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 stories"
+				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 stories
+				border-dashed border-4 border-amber-300"
 			>
 				STORIES
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3 events"
+				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events
+				border-dashed border-4 border-amber-300"
 			>
 				EVENTS
 			</button>
 			<button
 				type="button"
-				class="bg-blue-600 hover:bg-blue-800 rounded-full text-purple text-3xl shadow-2xl p-5 m-3  movie-appearances"
+				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3  movie-appearances
+				border-dashed border-4 border-amber-300"
 			>
 				MOVIES
 			</button>
