functionality for 2 APIs + bug fixes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			</div>
 			</section>
 
-		<section class=" flex-wrap">
+			<!-- FYI added class "extra-info"-->
+		<section class="flex-wrap extra-info">
 			<div class="hero-name-display">
 				<!-- FYI added class to img and removed attributes -->
 				<img class="hero-gif invisible visible" src="#"/>
