fixed class names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="./assets/images/icons8-boom-48.png" />
-		<link rel="stylesheet" href="./assets/css/css/styles.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Hero Hub</title>
 		<link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
@@ -38,7 +38,7 @@
 
 			</section>
 
-			<div class="hero-name-display flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10 invisible visible">
+			<div class="hero-name-display hidden flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 				<!-- FYI added class to img and removed attributes -->
 				<img class="hero-gif" src="#"/>
 			</div>
@@ -46,7 +46,8 @@
 			<!-- FYI added class "extra-info" -->
 		<section class="extra-info flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 
-			<div class="flex-wrap">
+			<!-- FYI class name "buttons hidden" -->
+			<div class="flex-wrap buttons hidden">
 			<button
 				
 				type="button"
