added functionality to comics/events buttons

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 			>
 				COMICS
 			</button>
-			<button
+			<!-- <button
 				type="button"
 				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 stories
 				border-dashed border-4 border-amber-300"
 			>
 				STORIES
-			</button>
+			</button> -->
 			<button
 				type="button"
 				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events
