--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 			</section>
 
 			<div class="hero-name-display hidden flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
-				<!-- FYI added class to img and removed attributes -->
+				
 				<img class="hero-gif" src="#"/>
 			</div>
 
-			<!-- FYI added class "extra-info" -->
+			
 		<section class="extra-info flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 
 			<!-- FYI class name "buttons hidden" -->
@@ -56,13 +56,13 @@
 			>
 				COMICS
 			</button>
-			<!-- <button
+			<button
 				type="button"
 				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 stories
 				border-dashed border-4 border-amber-300"
 			>
 				STORIES
-			</button> -->
+			</button> 
 			<button
 				type="button"
 				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events
