--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-	<header>Marvel Mahem</header>
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,6 +18,16 @@
 	</head>
 
 	<body class="bg-stone-50">
+		<div class="center-outer">
+			<div class="center-inner">
+			
+			<div class="bubbles">
+			<header>Marvel Mayhem</header>
+			</div>
+			
+			</div>
+			</div>
+		
 		<!--Hero search-bar-->
 		
 		<section class=" flex justify-center border-4 border-black bg-gradient-to-r from-blue-800 to-yellow-500 m-2 p-9 shadow-2xl ">
