--- a/index.html
+++ b/index.html
@@ -1,99 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="./assets/images/icons8-boom-48.png" />
-		<link rel="stylesheet" href="./assets/css/style.css" />
-		<script src="https://cdn.tailwindcss.com"></script>
-		<title>Hero Hub</title>
-		<link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
-		<link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
-		<style>
-			body {
-				font-family: "Bangers", sans-serif;
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" href="./assets/images/icons8-boom-48.png" />
+	<link rel="stylesheet" href="./assets/css/style.css" />
+	<script src="https://cdn.tailwindcss.com"></script>
+	<title>Hero Hub</title>
+	<link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico" />
+	<link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
+	<style>
+		body {
+			font-family: "Bangers", sans-serif;
+		}
+		 header h1{
+			font-size: 100px;
+			color: red;
+			text-shadow: 2px 2px black;
 			}
-		</style>
-	</head>
+			header p {
+				font-size: small;
+				text-align-last: center;
+				;
+				color: white
+			}
+	</style>
+</head>
 
-	<body class="bg-stone-50">
-		<div class="center-outer">
-			<div class="center-inner">
-			
-			<div class="bubbles">
-			<header>Marvel Mayhem</header>
-			</div>
-			
-			</div>
-			</div>
-		
-		<!--Hero search-bar-->
-		
-		<section class=" flex justify-center border-4 border-black bg-gradient-to-r from-blue-800 to-yellow-500 m-2 p-9 shadow-2xl ">
-			<form class="p-2">
-				<!--input for book/movie title-->
-				<label for="book-input"></label>
-				<input
-					type="text"
-					id="book-name"
-					placeholder="Search for Superhero!"
-         			class="hero-search-input"
-				/>
-			</form>
-			
-				<button	type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
-			</div>
+<body class="bg-stone-50">
+
+	<header class=" flex justify-center border-4 border-black bg-gradient-to-r from-green-800 to-purple-500 m-2 p-9 shadow-2x1">
+		<h1>Marvel Mayhem</h1>
+		<p>Are you a Marvel fan? Maybe just saw a movie or heard of a character? Ever wondered more about who is behind the masks and wearing those suits and capes? Type in the name of your favorite Marvel superhero and learn all about them!! </p>
+	</header>
+
+	<!--Hero search-bar-->
+
+	<section
+		class=" flex justify-center border-4 border-black bg-gradient-to-r from-blue-800 to-yellow-500 m-2 p-9 shadow-2xl ">
+		<form class="p-2">
+			<!--input for book/movie title-->
+			<label for="book-input"></label>
+			<input type="text" id="book-name" placeholder="Search for Superhero!" class="hero-search-input" />
+		</form>
+
+		<button type="button"
+			class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-2xl p-1 shadow-2xl search-bttn">Search</button>
+		</div>
 
 
-			</section>
+	</section>
 
-			<div class="hero-name-display hidden flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
-				<!-- FYI added class to img and removed attributes -->
-				<img class="hero-gif" src="#"/>
-			</div>
+	<div
+		class="hero-name-display hidden flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
+		<!-- FYI added class to img and removed attributes -->
+		<img class="hero-gif" src="#" />
+	</div>
 
-			<!-- FYI added class "extra-info" -->
-		<section class="extra-info flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
+	<!-- FYI added class "extra-info" -->
+	<section class="extra-info flex-wrap border-4 border-black bg-gradient-to-r from-blue-500 to-orange-500 m-2 p-10">
 
-			<!-- FYI class name "buttons hidden" -->
-			<div class="flex-wrap buttons hidden">
-			<button
-				
-				type="button"
-				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 comics
-				border-dashed border-4 border-amber-300"
-			>
+		<!-- FYI class name "buttons hidden" -->
+		<div class="flex-wrap buttons hidden">
+			<button type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 comics
+				border-dashed border-4 border-amber-300">
 				COMICS
 			</button>
-			<button
-				type="button"
-				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 stories
-				border-dashed border-4 border-amber-300"
-			>
+			<button type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 stories
+				border-dashed border-4 border-amber-300">
 				STORIES
 			</button>
-			<button
-				type="button"
-				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events
-				border-dashed border-4 border-amber-300"
-			>
+			<button type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3 events
+				border-dashed border-4 border-amber-300">
 				EVENTS
 			</button>
-			<button
-				type="button"
-				class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3  movie-appearances
-				border-dashed border-4 border-amber-300"
-			>
+			<button type="button" class="bg-stone-50 hover:bg-blue-800 rounded-md text-purple text-3xl shadow-2xl p-5 m-3  movie-appearances
+				border-dashed border-4 border-amber-300">
 				MOVIES
 			</button>
-			</div>
-		</section>
+		</div>
+	</section>
 
 
-		<article class="movie-list" >
-			
-		</article>
-    <script src="assets/js/script.js"></script>
-	</body>
+	<article class="movie-list">
+
+	</article>
+	<script src="assets/js/script.js"></script>
+</body>
+
 </html>
