add team member function for teams game

--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
 		<article class="movie-list" >
 			
 		</article>
+
+
+<div class="teams-container">
+	<div class="build-team">
+<h2 class="build-title">Build your super dream team!</h2>
+<p>Write the names of 5 heros you want on your team.</p>
+<input type="text" placeholder="add Superhero!"
+class="add-hero">
+<button class="add-hero-btn">ADD</button>
+	</div>
+
+
+
+</div>
+
+
     <script src="assets/js/script.js"></script>
 	</body>
 </html>
