--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <body class="bg-stone-50">
 
 	<header class=" flex justify-center border-4 border-black bg-gradient-to-r from-green-800 to-purple-500 m-2 p-9 shadow-2x1">
-		<h1>Marvel Mayhem</h1>
+		<h1>Marvel Mayhem</h1><break>
+		</break>
 		<p>Are you a Marvel fan? Maybe just saw a movie or heard of a character? Ever wondered more about who is behind the masks and wearing those suits and capes? Type in the name of your favorite Marvel superhero and learn all about them!! </p>
 	</header>
 
