localStorage basic setup

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div class="teams-container">
 	<div class="build-team">
 <h2 class="build-title">Build your super dream team!</h2>
-<p>Write the names of 5 heros you want on your team.</p>
+<p>Write the names of 5 heroes you want on your team.</p>
 <input type="text" placeholder="add Superhero!"
 class="add-hero">
 <button class="add-hero-btn">ADD</button>
