--- a/index.html
+++ b/index.html
@@ -15,27 +15,41 @@
 		body {
 			font-family: "Bangers", sans-serif;
 		}
-		 header h1{
+
+		header {
+    width: 100%;
+    background-image:url("./images/marvel.jpg");
+	border: 3px;
+	padding-top: 5px;
+}
+
+		header h1 {
 			font-size: 100px;
 			color: red;
 			text-shadow: 2px 2px black;
-			}
-			header p {
-				font-size: small;
-				text-align-last: center;
-				;
-				color: white
-			}
+			text-align: center;
+		}
+
+		p {
+			text-align: bottom;
+			justify-content: center;
+			font-size: small;
+			text-align-last: center;
+			color: black;
+padding-top: 5px;
+		}
 	</style>
 </head>
 
 <body class="bg-stone-50">
 
-	<header class=" flex justify-center border-4 border-black bg-gradient-to-r from-green-800 to-purple-500 m-2 p-9 shadow-2x1">
-		<h1>Marvel Mayhem</h1><break>
-		</break>
-		<p>Are you a Marvel fan? Maybe just saw a movie or heard of a character? Ever wondered more about who is behind the masks and wearing those suits and capes? Type in the name of your favorite Marvel superhero and learn all about them!! </p>
+	<header>		
+		<h1>Marvel Mayhem</h1>
+		<!-- <img src="./images/marvel.jpg"alt="marvel logo" width="100%" height="60px"> -->
 	</header>
+	<p>Are you a Marvel fan? Maybe just saw a movie or heard of a character? Ever wondered more about who is behind
+		the masks and wearing those suits and capes? Type in the name of your favorite Marvel superhero and learn
+		all about them!! </p>
 
 	<!--Hero search-bar-->
 
