--- a/index.html
+++ b/index.html
@@ -11,35 +11,14 @@
 	<title>Hero Hub</title>
 	<link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico" />
 	<link href="https://fonts.googleapis.com/css?family=Bangers:regular" rel="stylesheet" />
-	<style>
-		body {
-			font-family: "Bangers", sans-serif;
-		}
-
-		header {
-    width: 100%;
-    background-image:url("./images/marvel.jpg");
-	border: 3px;
-	padding-top: 5px;
-}
-
-		header h1 {
-			font-size: 100px;
-			color: red;
-			text-shadow: 2px 2px black;
-			text-align: center;
-		}
-
-		p {
-			text-align: bottom;
-			justify-content: center;
-			font-size: small;
-			text-align-last: center;
-			color: black;
-padding-top: 5px;
-		}
-	</style>
 </head>
+<style>
+  header {
+  width: 100%;
+  background-image:url("./images/marvel.jpg");
+  border: 3px;
+  padding-top: 5px;
+  }</style>
 
 <body class="bg-stone-50">
 
